[package]
name = "solaredge"
description = "SolarEdge API client"
version = "0.4.2"
documentation = "https://docs.rs/solaredge"
homepage = "https://github.com/twistedfall/solaredge"
repository = "https://github.com/twistedfall/solaredge"
edition = "2024"
rust-version = "1.85.0"
license = "LGPL-3.0"
exclude = ["/.github", ".gitignore", "/tools", "release.toml", "rustfmt.toml", "README.tpl"]

[dependencies]
chrono = "0.4"
http-adapter = "0.2"
log = "0.4"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_repr = "0.1"
url = "2"

[dev-dependencies]
async-trait = "0.1"
env_logger = "0.11"
http-adapter-reqwest = "0.3"
tokio = { version = "1", default-features = false, features = ["macros"] }
