[package]
name = "solaredge"
version = "0.5.4"
edition = "2024"
rust-version = "1.85.0"
description = "SolarEdge API client"
keywords = ["solaredge", "energy", "solar", "automation", "home"]
categories = ["api-bindings", "network-programming", "asynchronous", "hardware-support"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/solaredge"
repository = "https://github.com/twistedfall/solaredge"
exclude = ["/.github", "/tools", ".gitignore", "release.toml", "rustfmt.toml"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
http-adapter = "0.2"
log = "0.4"
percent-encoding = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_repr = "0.1"
url = { version = "2", default-features = false }

[dev-dependencies]
async-trait = "0.1"
env_logger = "0.11"
http-adapter-reqwest = "0.3"
tokio = { version = "1", default-features = false, features = ["macros"] }
