[package]
name = "solaredge-reqwest"
description = "HTTPAdapter implementation for solaredge crate based on reqwest"
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/solaredge-reqwest"
homepage = "https://github.com/twistedfall/solaredge/tree/master/solaredge-reqwest"
repository = "https://github.com/twistedfall/solaredge"
license = "LGPL-3.0"

[dependencies]
async-trait = "0.1"
reqwest = "0.11"
solaredge = { version = "0.1", path = "../solaredge" }
url = "2.0"
