[package]
name = "solaredge"
description = "SolarEdge API client"
version = "0.1.6"
documentation = "https://docs.rs/solaredge"
homepage = "https://github.com/twistedfall/solaredge/tree/master/solaredge"
repository = "https://github.com/twistedfall/solaredge"
edition = "2018"
license = "LGPL-3.0"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
log = "0.4"
percent-encoding = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_repr = "0.1"
url = "2.0"
